@@ -1,0 +1,2 @@
+#define MANY_COLORS 1
+#include "mandel.c"
